# keycloak-config-operator

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: ci.yml
charts/keycloak-config-operator/: Chart.yaml  values.schema.json  values.yaml
config/crd/: keycloak.clouddicted.com_keycloakclientroles.yaml  keycloak.clouddicted.com_keycloakclients.yaml  keycloak.clouddicted.com_keycloakclientscopes.yaml  keycloak.clouddicted.com_keycloakidentityproviders.yaml  keycloak.clouddicted.com_keycloakprotocolmappers.yaml  keycloak.clouddicted.com_keycloakrealms.yaml  keycloak.clouddicted.com_keycloakroles.yaml  (+2 more)
develop/: 404.html  index.html  sitemap.xml
docs/: api-reference.md  compatibility.md  configuration-support.md  getting-started.md  index.md  usage.md
tests/: test_conditions.py  test_documentation.py  test_github_workflows.py  test_helm_chart.py  test_import.py  test_install_manifests.py  test_keycloak_client.py  test_keycloak_client_handler.py  test_keycloak_client_role_handler.py  test_keycloak_client_scope_handler.py  test_keycloak_identity_provider_handler.py  test_keycloak_protocol_mapper_handler.py  test_keycloak_realm_handler.py  test_keycloak_role_handler.py  test_keycloak_target_handler.py  test_kind_e2e_script.py  test_mkdocs_site.py  test_reconciliation.py  test_redaction.py  test_secrets.py
v0.1.0/: 404.html  index.html  sitemap.xml
v0.2.0/: 404.html  index.html  sitemap.xml
v0.3.0/: 404.html  index.html  sitemap.xml
(+111 files in other folders)
