[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "clouddicted-keycloak-config-operator"
version = "0.1.0"
description = "Kopf-based Kubernetes operator for managing Keycloak configuration."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Clouddicted" },
]
dependencies = [
  "httpx>=0.27,<1",
  "kopf>=1.37,<2",
  "kubernetes>=31,<34",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.8,<1",
]
docs = [
  "mkdocs>=1.6,<2",
  "mkdocs-material>=9.6,<10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: opt-in tests that require kind and kubectl",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
